# nds-rom-editor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
include/nre/base/format/: nds.hpp
include/nre/base/helper/: color.hpp  nds_file_system.hpp
include/nre/base/types/: generic_resource.hpp  image.hpp  nds.hpp
include/nre/cli/: main.hpp
include/nre/ui/: nds_viewer.hpp  ui.hpp
src/nre/base/format/: nds.cpp
src/nre/base/helper/: nds_file_system.cpp
src/nre/cli/: main.cpp
src/nre/ui/: main.cpp
